--- a/css/main.css
+++ b/css/main.css
@@ -20,11 +20,7 @@ p {
 .header {
   position: relative;
   text-align: center;
-  background: linear-gradient(
-    60deg,
-    rgba(84, 58, 183, 1) 0%,
-    rgba(0, 172, 193, 1) 100%
-  );
+  background: linear-gradient(60deg, rgb(0, 0, 0) 0%, rgb(12, 255, 146) 100%);
   color: white;
 }
 .logo {
@@ -40,14 +36,6 @@ p {
   width: 100%;
   margin: 0;
   padding: 0;
-}
-
-.flex {
-  /*Flexbox for containers*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
 .waves {
